force-app/main/default/objects/Country__c/Country__c.object-meta.xml
<CustomObject>
    <description>This Object is used to Store Data related to Countries which is populated from the API pointing to the Endpoint https://countrylayer.com/</description>
    <label>Country</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Country</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>