force-app/main/default/objects/Country__c/fields/alpha2code__c.field-meta.xml
<CustomField>
    <fullName>alpha2code__c</fullName>
    <description>This field is mapped to APHA2 Code from the API response of https://countrylayer.com/</description>
    <label>alpha2code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>