force-app/main/default/objects/Country__c/fields/Alpha3code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3code__c</fullName>
    <description>This field is mapped to APHA3 Code from the API response of https://countrylayer.com/</description>
    <label>Alpha3code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>