force-app/main/default/objects/Country__c/fields/Capital_city__c.field-meta.xml
<CustomField>
    <fullName>Capital_city__c</fullName>
    <description>This field is mapped to Capital city Code from the API response of https://countrylayer.com/</description>
    <label>Capital City</label>
    <length>55</length>
    <type>Text</type>
</CustomField>