force-app/main/default/objects/Country__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>this field is used as External id also to perform Upsert operation in case of API data chhanges</description>
    <externalId>true</externalId>
    <label>Country Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>