force-app/main/default/objects/Country__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This field is mapped to Region  from the API response of https://countrylayer.com/</description>
    <label>Region</label>
    <length>55</length>
    <type>Text</type>
</CustomField>