force-app/main/default/objects/Country__c/fields/RegionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocs__c</fullName>
    <description>This field is mapped to RegionalBlocs Acronyms Code from the API response of https://countrylayer.com/</description>
    <label>RegionalBlocs</label>
    <length>55</length>
    <type>Text</type>
</CustomField>